# IPhysicsEngine

./: CMakeLists.txt  README.txt
include/: ballistic.hpp  core.hpp  fireworks.hpp  forcegenerator.hpp  particle.hpp  particlecontacts.hpp  particleforcegenerator.hpp  particlelink.hpp  particlepointers.hpp  particleworld.hpp  precision.hpp  rigidbody.hpp  world.hpp
source/: ballistic.cpp  core.cpp  fireworks.cpp  forcegenerator.cpp  main.cpp  particle.cpp  particlecontacts.cpp  particleforcegenerator.cpp  particlelink.cpp  particleworld.cpp  rigidbody.cpp  world.cpp
